# jobsearch-dashboard

./: .gitignore  README.md  _quarto.yml  index.qmd  pyproject.toml
docs/: produce_fake_data.py
